--- a/知识点整理/03.js.md
+++ b/知识点整理/03.js.md
@@ -1,4 +1,6 @@
-# 面试知识点-js
+# JS
+
+[🔻底部](#bottom) <a id="top"></a>
 
 ## 简答
 
@@ -923,7 +925,7 @@ class MyClass {
 [AB测试最全干货](https://zhuanlan.zhihu.com/p/375902281)
 [AST抽象语法树](https://segmentfault.com/a/1190000016231512) -->
 
-- [面试知识点-js](#面试知识点-js)
+- [JS](#js)
   - [简答](#简答)
   - [判断数据类型](#判断数据类型)
   - [undefined](#undefined)
@@ -968,3 +970,7 @@ class MyClass {
   - [Object.assign](#objectassign)
     - [import 、export 导入导出](#import-export-导入导出)
     - [class类继承](#class类继承)
+
+---
+
+[🔺顶部](#top) <a id="bottom"></a>
