--- a/知识点整理/04.vue.md
+++ b/知识点整理/04.vue.md
@@ -1,4 +1,6 @@
-# 面试知识点-vue
+# Vue
+
+[🔻底部](#bottom) <a id="top"></a>
 
 ## 其他
 
@@ -786,7 +788,7 @@ proxyTable: {
 }
 ```
 
-- [面试知识点-vue](#面试知识点-vue)
+- [Vue](#vue)
   - [其他](#其他)
   - [基本知识](#基本知识)
     - [简答](#简答)
@@ -830,3 +832,7 @@ proxyTable: {
     - [自定义指令](#自定义指令)
     - [生命周期](#生命周期)
     - [computed和watch](#computed和watch) -->
+
+---
+
+[🔺顶部](#top) <a id="bottom"></a>
