--- a/知识点整理/性能.md
+++ b/知识点整理/性能.md
@@ -1,4 +1,6 @@
-# 面试知识点-性能优化
+# 性能优化
+
+[🔻底部](#bottom) <a id="top"></a>
 
 ## 常见优化手段
 
@@ -204,7 +206,7 @@ function showTop  () {
 window.onscroll = throttle(showTop,1000)
 ```
 
-- [面试知识点-性能优化](#面试知识点-性能优化)
+- [性能优化](#性能优化)
   - [常见优化手段](#常见优化手段)
     - [代码层面的优化](#代码层面的优化)
     - [Webpack 层面的优化](#webpack-层面的优化)
@@ -213,3 +215,7 @@ window.onscroll = throttle(showTop,1000)
     - [优化算法](#优化算法)
     - [前端SEO需要注意哪些](#前端seo需要注意哪些)
   - [防抖和节流](#防抖和节流)
+
+---
+
+[🔺顶部](#top) <a id="bottom"></a>
