--- a/知识点整理/浏览器.md
+++ b/知识点整理/浏览器.md
@@ -1,4 +1,6 @@
-# 面试知识点-浏览器
+# 浏览器
+
+[🔻底部](#bottom) <a id="top"></a>
 
 ## 什么是Bom？有哪些常用的Bom属性？
 
@@ -94,6 +96,10 @@ CSS 选择符从右往左匹配查找，避免 DOM 深度过深
 
 将频繁运行的动画变为图层，图层能够阻止该节点回流影响别的元素。比如对于 video标签，浏览器会自动将该节点变为图层。
 
-- [面试知识点-浏览器](#面试知识点-浏览器)
+- [浏览器](#浏览器)
   - [什么是Bom？有哪些常用的Bom属性？](#什么是bom有哪些常用的bom属性)
   - [浏览器的重绘和回流](#浏览器的重绘和回流)
+
+---
+
+[🔺顶部](#top) <a id="bottom"></a>
