--- a/知识点整理/算法.md
+++ b/知识点整理/算法.md
@@ -1,3 +1,9 @@
-# 面试知识点-算法
+# 算法
 
-- [面试知识点-算法](#面试知识点-算法)
+[🔻底部](#bottom) <a id="top"></a>
+
+- [算法](#算法)
+
+---
+
+[🔺顶部](#top) <a id="bottom"></a>
