--- a/知识点整理/设计模式.md
+++ b/知识点整理/设计模式.md
@@ -1,4 +1,6 @@
-# 面试知识点-设计模式
+# 设计模式
+
+[🔻底部](#bottom) <a id="top"></a>
 
 ## 设计模式
 
@@ -93,7 +95,12 @@ let sandboxModel=(function(){
 })()
 ```
 
-- [面试知识点-设计模式](#面试知识点-设计模式)
+- [设计模式](#设计模式)
   - [设计模式](#设计模式)
   - [工厂模式](#工厂模式)
   - [单例模式](#单例模式)
+  - [沙箱模式](#沙箱模式)
+
+---
+
+[🔺顶部](#top) <a id="bottom"></a>
