--- a/知识点整理/网络.md
+++ b/知识点整理/网络.md
@@ -1,4 +1,6 @@
-# 面试知识点-网络
+# 网络
+
+[🔻底部](#bottom) <a id="top"></a>
 
 ## 网页从输入网址到渲染完成经的过程
 
@@ -105,7 +107,7 @@ post不同，post做的一般是修改和删除的工作，所以必须与数据
   Sql注入
   html脚本注入 -->
 
-- [面试知识点-网络](#面试知识点-网络)
+- [网络](#网络)
   - [网页从输入网址到渲染完成经的过程](#网页从输入网址到渲染完成经的过程)
   - [TCP 传输的三次握手、四次挥手策略](#tcp-传输的三次握手四次挥手策略)
   - [HTTP 和 HTTPS，为什么HTTPS安全](#http-和-https为什么https安全)
@@ -113,3 +115,7 @@ post不同，post做的一般是修改和删除的工作，所以必须与数据
   - [中断ajax请求](#中断ajax请求)
   - [get/post的区别](#getpost的区别)
   - [get请求传参长度的误区、get和post请求在缓存方面的区别](#get请求传参长度的误区get和post请求在缓存方面的区别)
+
+---
+
+[🔺顶部](#top) <a id="bottom"></a>
