更新锚点不生效的问题

--- a/知识点整理/01.html.md
+++ b/知识点整理/01.html.md
@@ -1,6 +1,6 @@
 # HTML
 
-[🔻底部](#bottom) <a id="top"></a>
+[🔻底部](#bottom)<a id="top">⚓</a>
 
 ## HTML 语义化
 
@@ -61,4 +61,4 @@ href与src的区别
 
 ---
 
-[🔺顶部](#top) <a id="bottom"></a>
+[🔺顶部](#top) <a id="bottom">⚓</a>
