--- a/知识点整理/03.js.md
+++ b/知识点整理/03.js.md
@@ -1,6 +1,6 @@
 # JS
 
-[🔻底部](#bottom) <a id="top"></a>
+[🔻底部](#bottom)<a id="top">⚓</a>
 
 ## 简答
 
@@ -973,4 +973,4 @@ class MyClass {
 
 ---
 
-[🔺顶部](#top) <a id="bottom"></a>
+[🔺顶部](#top) <a id="bottom">⚓</a>
