--- a/知识点整理/04.vue.md
+++ b/知识点整理/04.vue.md
@@ -1,6 +1,6 @@
 # Vue
 
-[🔻底部](#bottom) <a id="top"></a>
+[🔻底部](#bottom)<a id="top">⚓</a>
 
 ## 其他
 
@@ -835,4 +835,4 @@ proxyTable: {
 
 ---
 
-[🔺顶部](#top) <a id="bottom"></a>
+[🔺顶部](#top) <a id="bottom">⚓</a>
