--- a/知识点整理/性能.md
+++ b/知识点整理/性能.md
@@ -1,6 +1,6 @@
 # 性能优化
 
-[🔻底部](#bottom) <a id="top"></a>
+[🔻底部](#bottom)<a id="top">⚓</a>
 
 ## 常见优化手段
 
@@ -218,4 +218,4 @@ window.onscroll = throttle(showTop,1000)
 
 ---
 
-[🔺顶部](#top) <a id="bottom"></a>
+[🔺顶部](#top) <a id="bottom">⚓</a>
