--- a/知识点整理/浏览器.md
+++ b/知识点整理/浏览器.md
@@ -1,6 +1,6 @@
 # 浏览器
 
-[🔻底部](#bottom) <a id="top"></a>
+[🔻底部](#bottom)<a id="top">⚓</a>
 
 ## 什么是Bom？有哪些常用的Bom属性？
 
@@ -102,4 +102,4 @@ CSS 选择符从右往左匹配查找，避免 DOM 深度过深
 
 ---
 
-[🔺顶部](#top) <a id="bottom"></a>
+[🔺顶部](#top) <a id="bottom">⚓</a>
