--- a/知识点整理/算法.md
+++ b/知识点整理/算法.md
@@ -1,9 +1,9 @@
 # 算法
 
-[🔻底部](#bottom) <a id="top"></a>
+[🔻底部](#bottom)<a id="top">⚓</a>
 
 - [算法](#算法)
 
 ---
 
-[🔺顶部](#top) <a id="bottom"></a>
+[🔺顶部](#top) <a id="bottom">⚓</a>
