--- a/知识点整理/网络.md
+++ b/知识点整理/网络.md
@@ -1,6 +1,6 @@
 # 网络
 
-[🔻底部](#bottom) <a id="top"></a>
+[🔻底部](#bottom)<a id="top">⚓</a>
 
 ## 网页从输入网址到渲染完成经的过程
 
@@ -118,4 +118,4 @@ post不同，post做的一般是修改和删除的工作，所以必须与数据
 
 ---
 
-[🔺顶部](#top) <a id="bottom"></a>
+[🔺顶部](#top) <a id="bottom">⚓</a>
