--- a/知识点整理/设计模式.md
+++ b/知识点整理/设计模式.md
@@ -1,6 +1,6 @@
 # 设计模式
 
-[🔻底部](#bottom) <a id="top"></a>
+[🔻底部](#bottom)<a id="top">⚓</a>
 
 ## 设计模式
 
@@ -103,4 +103,4 @@ let sandboxModel=(function(){
 
 ---
 
-[🔺顶部](#top) <a id="bottom"></a>
+[🔺顶部](#top) <a id="bottom">⚓</a>
