调整页面菜单

--- a/知识点整理/04.vue.md
+++ b/知识点整理/04.vue.md
@@ -2,12 +2,45 @@
 
 [🔻底部](#bottom)<a id="top">⚓</a>
 
-## 其他
+- [Vue](#vue)
+  - [基本知识](#基本知识)
+    - [简答](#简答)
+    - [v-model](#v-model)
+    - [v-if和v-for同时使用的问题](#v-if和v-for同时使用的问题)
+    - [delete和Vue.delete删除数组的区别](#delete和vuedelete删除数组的区别)
+    - [$nextTick](#nexttick)
+    - [vue.cli项目中src目录](#vuecli项目中src目录)
+    - [修饰符](#修饰符)
+    - [v-bind.sync](#v-bindsync)
+    - [vue初始化页面闪动](#vue初始化页面闪动)
+  - [vue高级](#vue高级)
+    - [MVVM](#mvvm)
+    - [响应式数据原理（Vue2和3）](#响应式数据原理vue2和3)
+    - [vue双向绑定原理](#vue双向绑定原理)
+    - [Proxy与Object.defineProperty的优劣对比](#proxy与objectdefineproperty的优劣对比)
+    - [vue2和vue3的区别](#vue2和vue3的区别)
+    - [项目构建](#项目构建)
+    - [实例化vue](#实例化vue)
+    - [Vuex](#vuex)
+    - [axios](#axios)
+    - [render函数](#render函数)
+    - [Vue-router跳转和location.href有什么区别](#vue-router跳转和locationhref有什么区别)
+    - [生命周期 hook 钩子](#生命周期-hook-钩子)
+    - [组件间传值和获取数据](#组件间传值和获取数据)
+    - [自定义指令](#自定义指令)
+    - [生命周期](#生命周期)
+    - [computed和watch](#computed和watch)
+    - [computed和methods](#computed和methods)
+    - [监听一个对象内部的变化](#监听一个对象内部的变化)
+    - [vue路由](#vue路由)
+    - [vue怎么重置data](#vue怎么重置data)
+    - [强制刷新组件](#强制刷新组件)
+    - [优化首页的加载速度](#优化首页的加载速度)
+    - [diff算法](#diff算法)
+    - [缓存组件及缓存组件更新](#缓存组件及缓存组件更新)
+    - [axios解决跨域请求](#axios解决跨域请求)
 
-- $attrs
-- $props
-- $listeners
-- 生命周期 hook: 事件前缀改为 vnode-
+---
 
 ## 基本知识
 
@@ -274,7 +307,9 @@ ajax请求: 1. 仅仅在请求的组件内使用，就不需要放入vuex 的sta
 
 使用 location.href= /url 来跳转，简单方便，但是刷新了页面；使用 history.pushState( /url ) ，无刷新页面，静态跳转；引进 router ，然后使用 router.push( /url ) 来跳转，使用了 diff 算法，实现了按需加载，减少了 dom 的消耗。其实使用 router 跳转和使用 history.pushState() 没什么差别的，因为vue-router就是用了 history.pushState() ，尤其是在history模式下。
 
-### 代码清除
+### 生命周期 hook 钩子
+
+在 vue3 中为 `vnode-`
 
 ```js
 mounted(){
@@ -291,6 +326,10 @@ mounted(){
 
 ```vue
 props, $emit, ref, $parent / $children, EventBus （$emit / $on）,$attrs/$listeners, provide / inject, Vuex
+
+- $attrs
+- $props
+- $listeners
 
 ## 获取数据
 // 1. 父访问子 $children, $ref(建议)
@@ -787,51 +826,6 @@ proxyTable: {
   }
 }
 ```
-
-- [Vue](#vue)
-  - [其他](#其他)
-  - [基本知识](#基本知识)
-    - [简答](#简答)
-    - [v-model](#v-model)
-    - [v-if和v-for同时使用的问题](#v-if和v-for同时使用的问题)
-    - [delete和Vue.delete删除数组的区别](#delete和vuedelete删除数组的区别)
-    - [$nextTick](#nexttick)
-    - [vue.cli项目中src目录](#vuecli项目中src目录)
-    - [修饰符](#修饰符)
-    - [v-bind.sync](#v-bindsync)
-    - [vue初始化页面闪动](#vue初始化页面闪动)
-  - [vue高级](#vue高级)
-    - [MVVM](#mvvm)
-    - [响应式数据原理（Vue2和3）](#响应式数据原理vue2和3)
-    - [vue双向绑定原理](#vue双向绑定原理)
-    - [Proxy与Object.defineProperty的优劣对比](#proxy与objectdefineproperty的优劣对比)
-    - [vue2和vue3的区别](#vue2和vue3的区别)
-    - [项目构建](#项目构建)
-    - [实例化vue](#实例化vue)
-    - [Vuex](#vuex)
-    - [axios](#axios)
-    - [render函数](#render函数)
-    - [Vue-router跳转和location.href有什么区别](#vue-router跳转和locationhref有什么区别)
-    - [代码清除](#代码清除)
-    - [组件间传值和获取数据](#组件间传值和获取数据)
-    - [自定义指令](#自定义指令)
-    - [生命周期](#生命周期)
-    - [computed和watch](#computed和watch)
-    - [computed和methods](#computed和methods)
-    - [监听一个对象内部的变化](#监听一个对象内部的变化)
-    - [vue路由](#vue路由)
-    - [vue怎么重置data](#vue怎么重置data)
-    - [强制刷新组件](#强制刷新组件)
-    - [优化首页的加载速度](#优化首页的加载速度)
-    - [diff算法](#diff算法)
-    - [缓存组件及缓存组件更新](#缓存组件及缓存组件更新)
-    - [axios解决跨域请求](#axios解决跨域请求)
-
-    <!-- - [代码清除](#代码清除)
-    - [组件间传值和获取数据](#组件间传值和获取数据)
-    - [自定义指令](#自定义指令)
-    - [生命周期](#生命周期)
-    - [computed和watch](#computed和watch) -->
 
 ---
 
