--- a/知识点整理/设计模式.md
+++ b/知识点整理/设计模式.md
@@ -2,6 +2,14 @@
 
 [🔻底部](#bottom)<a id="top">⚓</a>
 
+- [设计模式](#设计模式)
+  - [设计模式](#设计模式-1)
+  - [工厂模式](#工厂模式)
+  - [单例模式](#单例模式)
+  - [沙箱模式](#沙箱模式)
+
+---
+
 ## 设计模式
 
 - 创建型模式
@@ -94,12 +102,6 @@ let sandboxModel=(function(){
     }
 })()
 ```
-
-- [设计模式](#设计模式)
-  - [设计模式](#设计模式)
-  - [工厂模式](#工厂模式)
-  - [单例模式](#单例模式)
-  - [沙箱模式](#沙箱模式)
 
 ---
 
