--- a/知识点整理/性能.md
+++ b/知识点整理/性能.md
@@ -7,6 +7,7 @@
     - [代码层面的优化](#代码层面的优化)
     - [Webpack 层面的优化](#webpack-层面的优化)
     - [基础的 Web 技术的优化](#基础的-web-技术的优化)
+    - [强缓存/协商缓存](#强缓存协商缓存)
     - [移动端性能优化](#移动端性能优化)
     - [优化算法](#优化算法)
     - [前端SEO需要注意哪些](#前端seo需要注意哪些)
@@ -48,6 +49,13 @@ Tree Shaking
 为文件头指定Expires过期时间或Cache-Control
 使用cdn加载第三方模块
 使用 Chrome Performance 查找性能瓶颈
+
+### 强缓存/协商缓存
+
+强缓存的优先级高于协商缓存
+
+- 强缓存: 服务器端开启 Cache-control
+- 协商缓存: 服务器端关闭 Cache-control,通过 Etag/If-None-Match 或 Last-Modify/If-Modify-Since 作为判断条件
 
 <!-- ### 网络层面 -->
 
