--- a/知识点整理/浏览器.md
+++ b/知识点整理/浏览器.md
@@ -68,6 +68,7 @@ navigator.cookieEnabled -- 返回浏览器是否支持(启用)cookie
 
 使用 translate 替代 top
 
+```html
 <div class="test"></div>
 <style>
   .test {
@@ -84,6 +85,8 @@ navigator.cookieEnabled -- 返回浏览器是否支持(启用)cookie
       document.querySelector('.test').style.top = '100px'
   }, 1000)
 </script>
+```
+
 使用 visibility替换 display: none，因为前者只会引起重绘，后者会引发回流（改变了布局）
 
 把 DOM 离线后修改，比如：先把 DOM 给 display:none(有一次 Reflow)，然后你修改100次，然后再把它显示出来
