--- a/FE/设计模式.md
+++ b/FE/设计模式.md
@@ -1,47 +1,25 @@
 # 设计模式
 
-[🔻底部](#bottom)<a id="top">⚓</a>
+[🔻 底部](#bottom)<a id="top">⚓</a>
 
 - [设计模式](#设计模式)
-  - [设计模式](#设计模式-1)
-  - [工厂模式](#工厂模式)
-  - [单例模式](#单例模式)
-  - [沙箱模式](#沙箱模式)
+  - [设计模式分类](#设计模式分类)
+    - [工厂模式](#工厂模式)
+    - [单例模式](#单例模式)
+    - [沙箱模式](#沙箱模式)
 
 ---
 
-## 设计模式
+## 设计模式分类
 
-- 创建型模式
-工厂方法模式
-抽象工厂模式
-单例模式
-建造者模式
-原型模式
+- 创建型模式:
+  `工厂方法模式` , `抽象工厂模式` , `单例模式` , `建造者模式` , `原型模式`
+- 结构型模式:
+  `适配器模式` , `装饰器模式` , `代理模式` , `外观模式` , `桥接模式` , `组合模式` , `享元模式`
+- 行为型模式:
+  `策略模式` , `模板方法模式` , `观察者模式` , `迭代器模式` , `责任链模式` , `命令模式` , `备忘录模式` , `状态模式` , `访问者模式` , `中介者模式` , `解释器模式`
 
-- 结构型模式
-适配器模式
-装饰器模式
-代理模式
-外观模式
-桥接模式
-组合模式
-享元模式
-
-- 行为型模式
-策略模式
-模板方法模式
-观察者模式
-迭代器模式
-责任链模式
-命令模式
-备忘录模式
-状态模式
-访问者模式
-中介者模式
-解释器模式
-
-## 工厂模式
+### 工厂模式
 
 简单的工厂模式可以理解为解决多个相似的问题
 
@@ -56,11 +34,11 @@ function CreatePerson(name, age, sex) {
   };
   return obj;
 }
-var p1 = new CreatePerson("longen", "28", "男");
-var p2 = new CreatePerson("tugenhua", "27", "女");
+var p1 = new CreatePerson('longen', '28', '男');
+var p2 = new CreatePerson('tugenhua', '27', '女');
 ```
 
-## 单例模式
+### 单例模式
 
 只能被实例化(构造函数给实例添加属性与方法)一次
 
@@ -84,25 +62,25 @@ var getInstance = (function () {
   };
 })();
 // 测试单体模式的实例,所以a===b
-var a = getInstance("aa");
-var b = getInstance("bb");
+var a = getInstance('aa');
+var b = getInstance('bb');
 ```
 
-## 沙箱模式
+### 沙箱模式
 
 将一些函数放到自执行函数里面,但要用闭包暴露接口,用变量接收暴露的接口,再调用里面的值,否则无法使用里面的值
 
 ```js
-let sandboxModel=(function(){
-    function sayName(){};
-    function sayAge(){};
-    return{
-        sayName:sayName,
-        sayAge:sayAge
-    }
-})()
+let sandboxModel = (function () {
+  function sayName() {}
+  function sayAge() {}
+  return {
+    sayName: sayName,
+    sayAge: sayAge,
+  };
+})();
 ```
 
 ---
 
-[🔺顶部](#top) <a id="bottom">⚓</a>
+[🔺 顶部](#top) <a id="bottom">⚓</a>
