--- a/FE/算法.md
+++ b/FE/算法.md
@@ -1,21 +1,30 @@
 # 算法
 
-[🔻底部](#bottom)<a id="top">⚓</a>
+[🔻 底部](#bottom)<a id="top">⚓</a>
 
 - [算法](#算法)
-  - [YYY](#yyy)
+  - [基础知识](#基础知识)
+    - [算法的复杂度](#算法的复杂度)
+    - [大 O 表示法](#大-o-表示法)
 
 ---
 
-## YYY
+## 基础知识
 
-- AAA
-- BBB
-- CCC
+### 算法的复杂度
+
+- 时间复杂度： 时间复杂度是指执行算法所需要的计算工作量(从增速的角度度量)
+- 空间复杂度： 是对一个算法在运行过程中临时占用存储空间大小的量度
+
+### 大 O 表示法
+
+- 线性时间 `O(n)`
+- 对数时间 `O(log n)`
 
 ```js
+
 ```
 
 ---
 
-[🔺顶部](#top) <a id="bottom">⚓</a>
+[🔺 顶部](#top) <a id="bottom">⚓</a>
