更新设计模式等文档

--- a/docs/FE/设计模式.md
+++ b/docs/FE/设计模式.md
@@ -3,6 +3,7 @@
 [🔻 底部](#bottom)<a id="top">⚓</a>
 
 - [设计模式](#设计模式)
+  - [设计模式的五大基本原则](#设计模式的五大基本原则)
   - [设计模式分类](#设计模式分类)
     - [工厂模式](#工厂模式)
     - [单例模式](#单例模式)
@@ -10,14 +11,62 @@
 
 ---
 
+## 设计模式的五大基本原则
+
+> 核心的思想——封装变化
+> 将变与不变分离，确保变化的部分灵活、不变的部分稳定
+
+单一功能原则（Single Responsibility Principle）
+开放封闭原则（Opened Closed Principle）
+里式替换原则（Liskov Substitution Principle）
+接口隔离原则（Interface Segregation Principle）
+依赖反转原则（Dependency Inversion Principle）
+
 ## 设计模式分类
 
-- 创建型模式:
-  `工厂方法模式` , `抽象工厂模式` , `单例模式` , `建造者模式` , `原型模式`
-- 结构型模式:
-  `适配器模式` , `装饰器模式` , `代理模式` , `外观模式` , `桥接模式` , `组合模式` , `享元模式`
-- 行为型模式:
-  `策略模式` , `模板方法模式` , `观察者模式` , `迭代器模式` , `责任链模式` , `命令模式` , `备忘录模式` , `状态模式` , `访问者模式` , `中介者模式` , `解释器模式`
+- **创建型** 设计模式:
+  `1. 简单工厂模式` ,
+  `2. 工厂方法模式` ,
+  `3. 抽象工厂模式` ,
+  `4. 建造者模式` ,
+  `5. 原型模式`,
+  `6. 单例模式`,
+- **结构型** 设计模式:
+  `7. 外观模式` ,
+  `8. 适配器模式` ,
+  `9. 代理模式` ,
+  `10. 装饰器模式` ,
+  `11. 桥接模式` ,
+  `12. 组合模式` ,
+  `13. 享元模式`,
+- **行为型** 设计模式:
+  `14. 模板方法模式` ,
+  `15. 观察者模式` ,
+  `16. 状态模式` ,
+  `17. 策略模式` ,
+  `18. 责任链模式` ,
+  `19. 命令模式` ,
+  `20. 访问者模式` ,
+  `21. 中介者模式` ,
+  `22. 备忘录模式` ,
+  `23. 迭代器模式` ,
+  `24. 解释器模式`,
+- **技巧型** 设计模式:
+  `25. 链模式`,
+  `26. 委托模式`,
+  `27. 数据访问对象模式`,
+  `28. 节流模式`,
+  `29. 简单模板模式`,
+  `30. 惰性模式`,
+  `31. 参与者模式`,
+  `32. 等待者模式`,
+- **架构型** 设计模式
+  `33. 同步模块模式`,
+  `34. 异步模块模式`,
+  `35. Widget 模式`,
+  `36. MVC 模式`,
+  `37. MVP 模式`,
+  `38. MVVM 模式`,
 
 ### 工厂模式
 
